Made changes to request permission to read SMS and log the SMS info for testing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mesa SMS App</string>
+    <string name="sample_button_string">Sample Button</string>
 </resources>
